# queryparser

./: .gitignore  .travis.yml  CHANGELOG.md  FUTURE.md  README.md  Setup.hs  queryparser.cabal  stack-lts-12-19.yaml  stack.yaml
bench/: Bench.hs
compat/Data/: Hashable.hs
compat/Test/: QuickCheck.hs
demo/: queryparser-demo.cabal
demo/src/: Demo.hs
dialects/hive/: CHANGELOG.md  queryparser-hive.cabal
dialects/hive/src/Database/Sql/Hive/: Parser.hs  Scanner.hs  Token.hs  Type.hs
dialects/hive/src/Database/Sql/Hive/Parser/: Internal.hs  Token.hs
dialects/presto/: LICENSE  queryparser-presto.cabal
dialects/presto/src/Database/Sql/Presto/: Parser.hs  Scanner.hs  Token.hs  Type.hs
dialects/presto/src/Database/Sql/Presto/Parser/: Internal.hs  Token.hs
dialects/vertica/: CHANGELOG.md  queryparser-vertica.cabal
dialects/vertica/src/Database/Sql/Vertica/: Parser.hs  Scanner.hs  Token.hs  Type.hs
dialects/vertica/src/Database/Sql/Vertica/Parser/: IngestionOptions.hs  Shared.hs  Token.hs
misc/predicate-class/: LICENSE  changelog.md  predicate-class.cabal
misc/predicate-class/src/Data/Predicate/: Class.hs
src/: Demo.hs
src/Data/: Predicate.hs
src/Data/Functor/Identity/: Orphans.hs
src/Data/Maybe/: More.hs
src/Database/Sql/: Helpers.hs  Info.hs  Position.hs  Pretty.hs  Type.hs
src/Database/Sql/Hive/: Parser.hs  Scanner.hs  Type.hs
src/Database/Sql/Presto/: Parser.hs  Scanner.hs  Type.hs
src/Database/Sql/Presto/Parser/: Token.hs
src/Database/Sql/Type/: Names.hs  Query.hs  Schema.hs  Scope.hs  TableProps.hs  Unused.hs
src/Database/Sql/Util/: Columns.hs  Eval.hs  Joins.hs  Schema.hs  Scope.hs  Tables.hs
src/Database/Sql/Util/Eval/: Concrete.hs
src/Database/Sql/Util/Lineage/: ColumnPlus.hs  Table.hs
src/Database/Sql/Vertica/: Parser.hs  Scanner.hs  Type.hs
src/Database/Sql/Vertica/Parser/: IngestionOptions.hs  Internal.hs  Token.hs
test/: Tests.hs  queryparser-test.cabal
test/Database/Sql/Hive/Parser/: Test.hs
test/Database/Sql/Hive/Scanner/: Test.hs
test/Database/Sql/Info/: Test.hs
test/Database/Sql/Position/: Test.hs
test/Database/Sql/Presto/Parser/: Test.hs
test/Database/Sql/Presto/Scanner/: Test.hs
test/Database/Sql/Pretty/: Test.hs
test/Database/Sql/Util/: Catalog.hs  Test.hs
test/Database/Sql/Util/Catalog/: Test.hs
test/Database/Sql/Util/Columns/: Test.hs
test/Database/Sql/Util/Eval/: Test.hs
test/Database/Sql/Util/Joins/: Test.hs
test/Database/Sql/Util/Json/: Test.hs
test/Database/Sql/Util/Lineage/ColumnPlus/: Test.hs
test/Database/Sql/Util/Lineage/Table/: Test.hs
test/Database/Sql/Util/Schema/: Test.hs
test/Database/Sql/Util/Scope/: Test.hs
test/Database/Sql/Util/Tables/: Test.hs
test/Database/Sql/Vertica/Parser/: Test.hs
test/Database/Sql/Vertica/Scanner/: Test.hs
test/Test/HUnit/: Ticket.hs
test/goldens/scope/: ALTERTABLERENAME  AMBIGUOUSTABLE  AMBIGUOUSTABLECOLUMN  CREATEPROJECTION  DEFAULTAMBIGUOUSTABLE  DEFAULTAMBIGUOUSTABLE2  DEFAULTMISSING  DEFAULTMISSINGCOLUMN  DEFAULTMISSINGSCHEMA  DEFAULTMISSINGTABLE  DEFAULTOTHERFOO  DEFAULTSEMI  DEFAULTSEMI2  DEFAULTSEMI4  DEFAULTSETSCHEMA  DEFAULTTWOJOINS2  DEFAULTUNINTRODUCEDTABLE  EXPLODE  EXPLODE2  GROUP  MISSINGCOL.broken  MISSINGSCHEMA  MISSINGTABLE  MORESEMI  MORESEMI3.broken  NATURAL.broken  ORDER  ORDER2  OTHERFOO  PATHOLOGICALSEMI2  PATHOLOGICALSEMI3  QUALMISSING  SEMIJOIN  SUBQUERY2  SUBSELECTALIAS  SUBSELECTGROUPBY  TRICKY  TWOJOINS  TWOJOINS2  UNINTRODUCEDTABLE  (+1 more)
