name:                predicate-class
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              David Thomas
maintainer:          heli@uber.com
-- copyright:
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Predicate.Class
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell98
