name:                predicate-class
version:             0.1.0.1
synopsis:            Helper class for passing context along a predicate value
description:
            Helper class for passing context along a predicate value
            Used as a helper in queryparser
license:             MIT
license-file:        LICENSE
author:              David Thomas
maintainer:          heli@uber.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:
                     CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Predicate.Class
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell98
